force-app/main/default/objects/Partners_Form_Template_to_Account__c/Partners_Form_Template_to_Account__c.object-meta.xml
<CustomObject>
    <description>NICC-024156: Junction Object between Partners Form Template Object to Account Object</description>
    <label>Partners Form Template to Account</label>
    <nameField>
        <displayFormat>PFTA-{0000}</displayFormat>
        <label>Partners Form Template to Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners Form Template to Account</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>