force-app/main/default/objects/Partners_Form_Template_to_Account__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-024156</description>
    <label>Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partners_Form_Template_to_Account</relationshipName>
    <type>Lookup</type>
</CustomField>