force-app/main/default/objects/Partners_Form_Template_to_Account__c/fields/Accepted_Terms__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-024156</description>
    <label>Accepted Terms</label>
    <type>Checkbox</type>
</CustomField>