force-app/main/default/objects/Partners_Form_Template_to_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>NICC-024156</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account selected must have a record type of &quot;Partner Account&quot;.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partners Form Template to Account</relationshipLabel>
    <relationshipName>Partners_Form_Template_to_Account</relationshipName>
    <type>Lookup</type>
</CustomField>