force-app/main/default/objects/Partners_Form_Template_to_Account__c/fields/Date_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_Accepted__c</fullName>
    <description>NICC-024156</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Accepted</label>
    <type>DateTime</type>
</CustomField>