force-app/main/default/objects/Partners_Form_Template_to_Account__c/fields/Dupe_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dupe_Manager__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Dupe Manager</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>