force-app/main/default/objects/Partners_Form_Template_to_Account__c/fields/Form_Subject__c.field-meta.xml
<CustomField>
    <fullName>Form_Subject__c</fullName>
    <description>NICC-024156</description>
    <formula>Partners_Form_Template__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Subject</label>
    <type>Text</type>
</CustomField>