force-app/main/default/objects/Partners_Form_Template_to_Account__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accepted By IP Address</label>
    <length>60</length>
    <type>Text</type>
</CustomField>