force-app/main/default/objects/Partners_Form_Template_to_Account__c/fields/Partners_Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Partners_Form_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>NICC-024156</description>
    <label>Partners Form Template</label>
    <referenceTo>Partners_Form_Template__c</referenceTo>
    <relationshipLabel>Partners Form Template to Account</relationshipLabel>
    <relationshipName>Partners_Form_Template_to_Account</relationshipName>
    <type>Lookup</type>
</CustomField>