force-app/main/default/objects/Partners_Form_Template_to_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partners_Form_Template__c</columns>
    <columns>Form_Subject__c</columns>
    <columns>Account__c</columns>
    <columns>Accepted_By__c</columns>
    <columns>Date_Accepted__c</columns>
    <columns>Accepted_Terms__c</columns>
    <columns>IP_Address__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>